# cp2077-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmds/: Logs.reds  setup.bat
res/scripts/: .gitkeep  HelloWorld.reds
src/: main.cpp
